<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditTextActivity">

    <EditText
        android:id="@+id/et_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="输入数字"/>

    <EditText
        android:id="@+id/et_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="输入数字"/>

    <TextView
        android:id="@+id/tv_sum"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:text="100"
        android:textColor="#0000aa"
        android:textSize="16sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/bt_sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="求和"/>

    <Button
        android:id="@+id/bt_sum2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="求积"/>

</LinearLayout>